# convert-cad-formats-to-vertices

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  main.cpp
data/: impeller.ply  out_impeller.vrml
freecad/: CMakeLists.txt
freecad/mesh/: GTSAlgos.cpp  GTSAlgos.h  Mesh.cpp  Mesh.h  MeshPoint.h  MeshPointPyImp.cpp  MeshProperties.cpp  MeshProperties.h
freecad/mesh/Core/: Iterator.h  MeshIO.cpp  MeshIO.h  SetOperations.cpp  SetOperations.h
