cmake_minimum_required(VERSION 3.15)

project(ModelConverter)

SET(Core_SRCS
    mesh/Core/Algorithm.cpp
    mesh/Core/Algorithm.h
    mesh/Core/Approximation.cpp
    mesh/Core/Approximation.h
    mesh/Core/Builder.cpp
    mesh/Core/Builder.h
    mesh/Core/Curvature.cpp
    mesh/Core/Curvature.h
    mesh/Core/Decimation.cpp
    mesh/Core/Decimation.h
    mesh/Core/Definitions.cpp
    mesh/Core/Definitions.h
    mesh/Core/Degeneration.cpp
    mesh/Core/Degeneration.h
    mesh/Core/Elements.cpp
    mesh/Core/Elements.h
    mesh/Core/Evaluation.cpp
    mesh/Core/Evaluation.h
    mesh/Core/Grid.cpp
    mesh/Core/Grid.h
    mesh/Core/Helpers.h
    mesh/Core/Info.cpp
    mesh/Core/Info.h
    mesh/Core/Iterator.h
    mesh/Core/KDTree.cpp
    mesh/Core/KDTree.h
    mesh/Core/MeshIO.cpp
    mesh/Core/MeshIO.h
    mesh/Core/MeshKernel.cpp
    mesh/Core/MeshKernel.h
    mesh/Core/Projection.cpp
    mesh/Core/Projection.h
    mesh/Core/Segmentation.cpp
    mesh/Core/Segmentation.h
    mesh/Core/SetOperations.cpp
    mesh/Core/SetOperations.h
    mesh/Core/Smoothing.cpp
    mesh/Core/Smoothing.h
    mesh/Core/Tools.cpp
    mesh/Core/Tools.h
    mesh/Core/TopoAlgorithm.cpp
    mesh/Core/TopoAlgorithm.h
    mesh/Core/Triangulation.cpp
    mesh/Core/Triangulation.h
    mesh/Core/Trim.cpp
    mesh/Core/Trim.h
    mesh/Core/TrimByPlane.cpp
    mesh/Core/TrimByPlane.h
    mesh/Core/tritritest.h
    mesh/Core/Utilities.h
    mesh/Core/Visitor.cpp
    mesh/Core/Visitor.h
)
SOURCE_GROUP("Core" FILES ${Core_SRCS})

SET(WildMagic4_SRCS
    mesh/WildMagic4/Wm4ApprCylinderFit3.cpp
    mesh/WildMagic4/Wm4ApprCylinderFit3.h
    mesh/WildMagic4/Wm4ApprGaussPointsFit2.cpp
    mesh/WildMagic4/Wm4ApprGaussPointsFit2.h
    mesh/WildMagic4/Wm4ApprGaussPointsFit3.cpp
    mesh/WildMagic4/Wm4ApprGaussPointsFit3.h
    mesh/WildMagic4/Wm4ApprLineFit3.cpp
    mesh/WildMagic4/Wm4ApprLineFit3.h
    mesh/WildMagic4/Wm4ApprPlaneFit3.cpp
    mesh/WildMagic4/Wm4ApprPlaneFit3.h
    mesh/WildMagic4/Wm4ApprPolyFit3.cpp
    mesh/WildMagic4/Wm4ApprPolyFit3.h
    mesh/WildMagic4/Wm4ApprQuadraticFit3.cpp
    mesh/WildMagic4/Wm4ApprQuadraticFit3.h
    mesh/WildMagic4/Wm4ApprSphereFit3.cpp
    mesh/WildMagic4/Wm4ApprSphereFit3.h
    mesh/WildMagic4/Wm4BandedMatrix.h
    mesh/WildMagic4/Wm4BandedMatrix.inl
    mesh/WildMagic4/Wm4Box2.h
    mesh/WildMagic4/Wm4Box2.inl
    mesh/WildMagic4/Wm4Box3.h
    mesh/WildMagic4/Wm4Box3.inl
    mesh/WildMagic4/Wm4ContBox2.cpp
    mesh/WildMagic4/Wm4ContBox2.h
    mesh/WildMagic4/Wm4ContBox3.cpp
    mesh/WildMagic4/Wm4ContBox3.h
    mesh/WildMagic4/Wm4ConvexHull.cpp
    mesh/WildMagic4/Wm4ConvexHull.h
    mesh/WildMagic4/Wm4ConvexHull1.cpp
    mesh/WildMagic4/Wm4ConvexHull1.h
    mesh/WildMagic4/Wm4ConvexHull2.cpp
    mesh/WildMagic4/Wm4ConvexHull2.h
    mesh/WildMagic4/Wm4ConvexHull3.cpp
    mesh/WildMagic4/Wm4ConvexHull3.h
    mesh/WildMagic4/Wm4DelPolygonEdge.cpp
    mesh/WildMagic4/Wm4DelPolygonEdge.h
    mesh/WildMagic4/Wm4DelPolyhedronFace.cpp
    mesh/WildMagic4/Wm4DelPolyhedronFace.h
    mesh/WildMagic4/Wm4DelTetrahedron.cpp
    mesh/WildMagic4/Wm4DelTetrahedron.h
    mesh/WildMagic4/Wm4DelTriangle.cpp
    mesh/WildMagic4/Wm4DelTriangle.h
    mesh/WildMagic4/Wm4Delaunay.cpp
    mesh/WildMagic4/Wm4Delaunay.h
    mesh/WildMagic4/Wm4Delaunay1.cpp
    mesh/WildMagic4/Wm4Delaunay1.h
    mesh/WildMagic4/Wm4Delaunay2.cpp
    mesh/WildMagic4/Wm4Delaunay2.h
    mesh/WildMagic4/Wm4Delaunay3.cpp
    mesh/WildMagic4/Wm4Delaunay3.h
    mesh/WildMagic4/Wm4DistLine3Segment3.cpp
    mesh/WildMagic4/Wm4DistLine3Segment3.h
    mesh/WildMagic4/Wm4DistLine3Triangle3.cpp
    mesh/WildMagic4/Wm4DistLine3Triangle3.h
    mesh/WildMagic4/Wm4DistSegment3Segment3.cpp
    mesh/WildMagic4/Wm4DistSegment3Segment3.h
    mesh/WildMagic4/Wm4DistSegment3Triangle3.cpp
    mesh/WildMagic4/Wm4DistSegment3Triangle3.h
    mesh/WildMagic4/Wm4DistVector3Plane3.cpp
    mesh/WildMagic4/Wm4DistVector3Plane3.h
    mesh/WildMagic4/Wm4DistVector3Segment3.cpp
    mesh/WildMagic4/Wm4DistVector3Segment3.h
    mesh/WildMagic4/Wm4DistVector3Triangle3.cpp
    mesh/WildMagic4/Wm4DistVector3Triangle3.h
    mesh/WildMagic4/Wm4Distance.cpp
    mesh/WildMagic4/Wm4Distance.h
    mesh/WildMagic4/Wm4ETManifoldMesh.cpp
    mesh/WildMagic4/Wm4ETManifoldMesh.h
    mesh/WildMagic4/Wm4ETManifoldMesh.inl
    mesh/WildMagic4/Wm4EdgeKey.h
    mesh/WildMagic4/Wm4EdgeKey.inl
    mesh/WildMagic4/Wm4Eigen.cpp
    mesh/WildMagic4/Wm4Eigen.h
    mesh/WildMagic4/Wm4Foundation.h
    mesh/WildMagic4/Wm4FoundationLIB.h
    mesh/WildMagic4/Wm4FoundationPCH.cpp
    mesh/WildMagic4/Wm4FoundationPCH.h
    mesh/WildMagic4/Wm4GMatrix.h
    mesh/WildMagic4/Wm4GMatrix.inl
    mesh/WildMagic4/Wm4GVector.h
    mesh/WildMagic4/Wm4GVector.inl
    mesh/WildMagic4/Wm4ImplicitSurface.cpp
    mesh/WildMagic4/Wm4ImplicitSurface.h
    mesh/WildMagic4/Wm4Intersector.cpp
    mesh/WildMagic4/Wm4Intersector.h
    mesh/WildMagic4/Wm4Intersector1.cpp
    mesh/WildMagic4/Wm4Intersector1.h
    mesh/WildMagic4/Wm4IntrLine3Box3.cpp
    mesh/WildMagic4/Wm4IntrLine3Box3.h
    mesh/WildMagic4/Wm4IntrLine3Plane3.cpp
    mesh/WildMagic4/Wm4IntrLine3Plane3.h
    mesh/WildMagic4/Wm4IntrSegment3Box3.cpp
    mesh/WildMagic4/Wm4IntrSegment3Box3.h
    mesh/WildMagic4/Wm4IntrSegment3Plane3.cpp
    mesh/WildMagic4/Wm4IntrSegment3Plane3.h
    mesh/WildMagic4/Wm4IntrTriangle2Triangle2.cpp
    mesh/WildMagic4/Wm4IntrTriangle2Triangle2.h
    mesh/WildMagic4/Wm4IntrTriangle3Triangle3.cpp
    mesh/WildMagic4/Wm4IntrTriangle3Triangle3.h
    mesh/WildMagic4/Wm4LinComp.h
    mesh/WildMagic4/Wm4LinComp.inl
    mesh/WildMagic4/Wm4Line3.h
    mesh/WildMagic4/Wm4Line3.inl
    mesh/WildMagic4/Wm4LinearSystem.cpp
    mesh/WildMagic4/Wm4LinearSystem.h
    mesh/WildMagic4/Wm4Mapper2.h
    mesh/WildMagic4/Wm4Mapper2.inl
    mesh/WildMagic4/Wm4Mapper3.h
    mesh/WildMagic4/Wm4Mapper3.inl
    mesh/WildMagic4/Wm4Math.cpp
    mesh/WildMagic4/Wm4Math.h
    mesh/WildMagic4/Wm4Math.inl
    mesh/WildMagic4/Wm4MathMCR.h
    mesh/WildMagic4/Wm4Matrix2.cpp
    mesh/WildMagic4/Wm4Matrix2.h
    mesh/WildMagic4/Wm4Matrix2.inl
    mesh/WildMagic4/Wm4Matrix3.cpp
    mesh/WildMagic4/Wm4Matrix3.h
    mesh/WildMagic4/Wm4Matrix3.inl
    mesh/WildMagic4/Wm4Matrix4.cpp
    mesh/WildMagic4/Wm4Matrix4.h
    mesh/WildMagic4/Wm4Matrix4.inl
    mesh/WildMagic4/Wm4Memory.cpp
    mesh/WildMagic4/Wm4Memory.h
    mesh/WildMagic4/Wm4Memory.inl
    mesh/WildMagic4/Wm4MeshCurvature.cpp
    mesh/WildMagic4/Wm4MeshCurvature.h
    mesh/WildMagic4/Wm4MeshSmoother.cpp
    mesh/WildMagic4/Wm4MeshSmoother.h
    mesh/WildMagic4/Wm4ParametricSurface.cpp
    mesh/WildMagic4/Wm4ParametricSurface.h
    mesh/WildMagic4/Wm4Plane3.h
    mesh/WildMagic4/Wm4Plane3.inl
    mesh/WildMagic4/Wm4Platforms.h
    mesh/WildMagic4/Wm4PolynomialRoots.cpp
    mesh/WildMagic4/Wm4PolynomialRoots.h
    mesh/WildMagic4/Wm4Polynomial1.h
    mesh/WildMagic4/Wm4Polynomial1.inl
    mesh/WildMagic4/Wm4QuadricSurface.cpp
    mesh/WildMagic4/Wm4QuadricSurface.h
    mesh/WildMagic4/Wm4Quaternion.cpp
    mesh/WildMagic4/Wm4Quaternion.h
    mesh/WildMagic4/Wm4Quaternion.inl
    mesh/WildMagic4/Wm4Query.h
    mesh/WildMagic4/Wm4Query.inl
    mesh/WildMagic4/Wm4Query2.h
    mesh/WildMagic4/Wm4Query2.inl
    mesh/WildMagic4/Wm4Query2Filtered.h
    mesh/WildMagic4/Wm4Query2Filtered.inl
    mesh/WildMagic4/Wm4Query2Int64.h
    mesh/WildMagic4/Wm4Query2Int64.inl
    mesh/WildMagic4/Wm4Query2TInteger.h
    mesh/WildMagic4/Wm4Query2TInteger.inl
    mesh/WildMagic4/Wm4Query2TRational.h
    mesh/WildMagic4/Wm4Query2TRational.inl
    mesh/WildMagic4/Wm4Query3.h
    mesh/WildMagic4/Wm4Query3.inl
    mesh/WildMagic4/Wm4Query3Filtered.h
    mesh/WildMagic4/Wm4Query3Filtered.inl
    mesh/WildMagic4/Wm4Query3Int64.h
    mesh/WildMagic4/Wm4Query3Int64.inl
    mesh/WildMagic4/Wm4Query3TInteger.h
    mesh/WildMagic4/Wm4Query3TInteger.inl
    mesh/WildMagic4/Wm4Query3TRational.h
    mesh/WildMagic4/Wm4Query3TRational.inl
    mesh/WildMagic4/Wm4RVector2.h
    mesh/WildMagic4/Wm4RVector2.inl
    mesh/WildMagic4/Wm4RVector3.h
    mesh/WildMagic4/Wm4RVector3.inl
    mesh/WildMagic4/Wm4Segment3.h
    mesh/WildMagic4/Wm4Segment3.inl
    mesh/WildMagic4/Wm4Sphere3.h
    mesh/WildMagic4/Wm4Sphere3.inl
    mesh/WildMagic4/Wm4Surface.cpp
    mesh/WildMagic4/Wm4Surface.h
    mesh/WildMagic4/Wm4System.cpp
    mesh/WildMagic4/Wm4System.h
    mesh/WildMagic4/Wm4System.inl
    mesh/WildMagic4/Wm4THashSet.h
    mesh/WildMagic4/Wm4THashSet.inl
    mesh/WildMagic4/Wm4THashTable.h
    mesh/WildMagic4/Wm4THashTable.inl
    mesh/WildMagic4/Wm4TInteger.h
    mesh/WildMagic4/Wm4TInteger.inl
    mesh/WildMagic4/Wm4TMinHeap.h
    mesh/WildMagic4/Wm4TMinHeap.inl
    mesh/WildMagic4/Wm4TRVector.h
    mesh/WildMagic4/Wm4TRVector.inl
    mesh/WildMagic4/Wm4TRational.h
    mesh/WildMagic4/Wm4TRational.inl
    mesh/WildMagic4/Wm4TSmallUnorderedSet.h
    mesh/WildMagic4/Wm4TSmallUnorderedSet.inl
    mesh/WildMagic4/Wm4TStringHashTable.h
    mesh/WildMagic4/Wm4TStringHashTable.inl
    mesh/WildMagic4/Wm4TTuple.h
    mesh/WildMagic4/Wm4TTuple.inl
    mesh/WildMagic4/Wm4Triangle2.h
    mesh/WildMagic4/Wm4Triangle2.inl
    mesh/WildMagic4/Wm4Triangle3.h
    mesh/WildMagic4/Wm4Triangle3.inl
    mesh/WildMagic4/Wm4TriangleKey.h
    mesh/WildMagic4/Wm4TriangleKey.inl
    mesh/WildMagic4/Wm4TriangulateEC.cpp
    mesh/WildMagic4/Wm4TriangulateEC.h
    mesh/WildMagic4/Wm4UniqueVerticesTriangles.h
    mesh/WildMagic4/Wm4UniqueVerticesTriangles.inl
    mesh/WildMagic4/Wm4VEManifoldMesh.cpp
    mesh/WildMagic4/Wm4VEManifoldMesh.h
    mesh/WildMagic4/Wm4VEManifoldMesh.inl
    mesh/WildMagic4/Wm4Vector2.cpp
    mesh/WildMagic4/Wm4Vector2.h
    mesh/WildMagic4/Wm4Vector2.inl
    mesh/WildMagic4/Wm4Vector3.cpp
    mesh/WildMagic4/Wm4Vector3.h
    mesh/WildMagic4/Wm4Vector3.inl
    mesh/WildMagic4/Wm4Vector4.cpp
    mesh/WildMagic4/Wm4Vector4.h
    mesh/WildMagic4/Wm4Vector4.inl
)
SOURCE_GROUP("WildMagic4" FILES ${WildMagic4_SRCS})

SET(Mesh_SRCS
    #${Mesh_XML_SRCS}
    mesh/AppMesh.cpp
    mesh/AppMeshPy.cpp
    mesh/Exporter.cpp
    mesh/Exporter.h
    mesh/Facet.cpp
    mesh/Facet.h
    mesh/FacetPyImp.cpp
    mesh/FeatureMeshCurvature.cpp
    mesh/FeatureMeshCurvature.h
    mesh/FeatureMeshDefects.cpp
    mesh/FeatureMeshDefects.h
    mesh/FeatureMeshExport.cpp
    mesh/FeatureMeshExport.h
    mesh/FeatureMeshImport.cpp
    mesh/FeatureMeshImport.h
    mesh/FeatureMeshSegmentByMesh.cpp
    mesh/FeatureMeshSegmentByMesh.h
    mesh/FeatureMeshSetOperations.cpp
    mesh/FeatureMeshSetOperations.h
    mesh/FeatureMeshSolid.cpp
    mesh/FeatureMeshSolid.h
    mesh/FeatureMeshTransform.cpp
    mesh/FeatureMeshTransform.h
    mesh/FeatureMeshTransformDemolding.cpp
    mesh/FeatureMeshTransformDemolding.h
#   GTSAlgos.cpp
#   GTSAlgos.h
    mesh/Mesh.cpp
    mesh/Mesh.h
    mesh/MeshFeature.cpp
    mesh/MeshFeature.h
    mesh/MeshFeaturePyImp.cpp
    mesh/MeshPointPyImp.cpp
    mesh/MeshPoint.h
    mesh/MeshProperties.cpp
    mesh/MeshProperties.h
    mesh/MeshPyImp.cpp
    mesh/MeshTexture.cpp
    mesh/MeshTexture.h
    mesh/PreCompiled.cpp
    mesh/PreCompiled.h
    mesh/Segment.cpp
    mesh/Segment.h
)

add_executable(ModelConverter
    main.cpp
    ${Core_SRCS}
    ${WildMagic4_SRCS}
    ${Mesh_SRCS}
)

target_include_directories(ModelConverter PRIVATE
    # ${Boost_INCLUDE_DIR}
    d:/dev/OCE-0.18/include/oce/
)

target_link_libraries(ModelConverter LINK_PUBLIC
    # ${Boost_LIBRARIES}
    d:/dev/OCE-0.18/Win64/lib/freetype.lib
    d:/dev/OCE-0.18/Win64/lib/FWOSPlugin.lib
    d:/dev/OCE-0.18/Win64/lib/PTKernel.lib
    d:/dev/OCE-0.18/Win64/lib/TKBin.lib
    d:/dev/OCE-0.18/Win64/lib/TKBinL.lib
    d:/dev/OCE-0.18/Win64/lib/TKBinTObj.lib
    d:/dev/OCE-0.18/Win64/lib/TKBinXCAF.lib
    d:/dev/OCE-0.18/Win64/lib/TKBO.lib
    d:/dev/OCE-0.18/Win64/lib/TKBool.lib
    d:/dev/OCE-0.18/Win64/lib/TKBRep.lib
    d:/dev/OCE-0.18/Win64/lib/TKCAF.lib
    d:/dev/OCE-0.18/Win64/lib/TKCDF.lib
    d:/dev/OCE-0.18/Win64/lib/TKernel.lib
    d:/dev/OCE-0.18/Win64/lib/TKFeat.lib
    d:/dev/OCE-0.18/Win64/lib/TKFillet.lib
    d:/dev/OCE-0.18/Win64/lib/TKG2d.lib
    d:/dev/OCE-0.18/Win64/lib/TKG3d.lib
    d:/dev/OCE-0.18/Win64/lib/TKGeomAlgo.lib
    d:/dev/OCE-0.18/Win64/lib/TKGeomBase.lib
    d:/dev/OCE-0.18/Win64/lib/TKHLR.lib
    d:/dev/OCE-0.18/Win64/lib/TKIGES.lib
    d:/dev/OCE-0.18/Win64/lib/TKLCAF.lib
    d:/dev/OCE-0.18/Win64/lib/TKMath.lib
    d:/dev/OCE-0.18/Win64/lib/TKMesh.lib
    d:/dev/OCE-0.18/Win64/lib/TKOffset.lib
    d:/dev/OCE-0.18/Win64/lib/TKPCAF.lib
    d:/dev/OCE-0.18/Win64/lib/TKPLCAF.lib
    d:/dev/OCE-0.18/Win64/lib/TKPrim.lib
    d:/dev/OCE-0.18/Win64/lib/TKPShape.lib
    d:/dev/OCE-0.18/Win64/lib/TKService.lib
    d:/dev/OCE-0.18/Win64/lib/TKShapeSchema.lib
    d:/dev/OCE-0.18/Win64/lib/TKShHealing.lib
    d:/dev/OCE-0.18/Win64/lib/TKStdLSchema.lib
    d:/dev/OCE-0.18/Win64/lib/TKStdSchema.lib
    d:/dev/OCE-0.18/Win64/lib/TKSTEP.lib
    d:/dev/OCE-0.18/Win64/lib/TKSTEP209.lib
    d:/dev/OCE-0.18/Win64/lib/TKSTEPAttr.lib
    d:/dev/OCE-0.18/Win64/lib/TKSTEPBase.lib
    d:/dev/OCE-0.18/Win64/lib/TKSTL.lib
    d:/dev/OCE-0.18/Win64/lib/TKTObj.lib
    d:/dev/OCE-0.18/Win64/lib/TKTopAlgo.lib
    d:/dev/OCE-0.18/Win64/lib/TKV3d.lib
    d:/dev/OCE-0.18/Win64/lib/TKVRML.lib
    d:/dev/OCE-0.18/Win64/lib/TKXCAF.lib
    d:/dev/OCE-0.18/Win64/lib/TKXCAFSchema.lib
    d:/dev/OCE-0.18/Win64/lib/TKXDEIGES.lib
    d:/dev/OCE-0.18/Win64/lib/TKXDESTEP.lib
    d:/dev/OCE-0.18/Win64/lib/TKXMesh.lib
    d:/dev/OCE-0.18/Win64/lib/TKXml.lib
    d:/dev/OCE-0.18/Win64/lib/TKXmlL.lib
    d:/dev/OCE-0.18/Win64/lib/TKXmlTObj.lib
    d:/dev/OCE-0.18/Win64/lib/TKXmlXCAF.lib
    d:/dev/OCE-0.18/Win64/lib/TKXSBase.lib
    )
